App.vue holds views directly

--- a/src/styles/gamepad.scss
+++ b/src/styles/gamepad.scss
@@ -1,7 +1,16 @@
 
 
 #sceneGamepad {
-    display: none;
+    //display: none;
+
+    font-size: 2em;
+    font-weight: bold;
+
+    // no text selection
+    -webkit-user-select: none; /* Chrome all / Safari all */
+    -moz-user-select: none;   /* Firefox all */
+    -ms-user-select: none;  /* IE 10+ */
+    user-select: none;  /* Likely future */ 
     
     /* Direction Buttons */
     .gamepadButtonLeft {
