--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,11 +1,11 @@
 
 /* Direction Buttons */
-$directionButtonHeight: 60%;
-$directionButtonWidth: 25%;
+$leftAreaHeight: 60%;
+$leftAreaWidth: 20%;
 
 /* Action buttons */
-$actionButtonWidth: 40%;
-$actionButtonHeight: 25%;
+$rightAreaHeight: 30%;
+$rightAreaWidth: 40%;
 
 /* Extra margin between buttons */
 $buttonMargin: 0.2rem;
