--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -13,6 +13,33 @@ html, body {
     height: 100%;
 }
 
+
+#overlayContainer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    /* Click through container */
+    pointer-events: none;
+}
+#overlayContainer > * {
+    /* Default click behavior for childs. */
+    pointer-events: initial;
+}
+/* Show fullscreenButton on top */
+#fullscreenButton {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+}
+
+
+
+
+
+
 /*
 * The following styles are auto-applied to elements with
 * transition="modal" when their visibility is toggled
